--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>RM Stats Tool</h1>
+    <p style="font-size: 80%"><a href="https://tools.wmflabs.org/apersonbot/">Tools</a> &gt; <b>RM Stats</b></p>
     <p>This tool analyzes how a user votes in <a href="https://en.wikipedia.org/wiki/WP:RM">RM discussions</a> and reports statistical results.</p>
     <form action="cgi-bin/rm-stats.py" method="get">
       <table>
@@ -23,6 +24,9 @@
         </tr>
       </table>
     </form>
+    <footer>
+      <a href="https://en.wikipedia.org/wiki/User:APerson" title="APerson's user page on the English Wikipedia">APerson</a> (<a href="https://en.wikipedia.org/wiki/User_talk:APerson" title="APerson's talk page on the English Wikipedia">talk!</a>) &middot; <a href="https://github.com/APerson241/rm-stats" title="Source code on GitHub">Source code</a> &middot; <a href="https://github.com/APerson241/rm-stats/issues" title="Issues on GitHub">Issues</a>
+    </footer>
   </body>
 </html>
 
